--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Weather app: {{title}}</title>
-    <link rel="stylesheet" type="text/css" href="/css/styles.css"/>
-</head>
+{{>head}}
 <body>
     {{>header}}
     <main class="content">
+        <p class="paragraph">My cool assiatant: </p>
         <picture>
             <source srcset="/img/cat.webp" alt="a cat">
             <img class="pic" src="/img/cat.jpeg" alt="a cat">
