--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -4,7 +4,11 @@
 <body>
     {{>header}}
     <main class="content">
-        <p class="paragraph">My cool assiatant: </p>
+        <p class="paragraph">
+            This is an educational project. It uses mapbox.com and darksky API.
+        </p>
+
+        <p class="paragraph">And this is my cool assiatant: </p>
         <picture>
             <source srcset="/img/cat.webp" alt="a cat">
             <img class="pic" src="/img/cat.jpeg" alt="a cat">
